@@ -2,6 +2,17 @@
 
 	Convert more pages to new param mechanism.
 
+	* src/gsad.c (validator): Remove.  Out of use.
+	(exec_omp_post): Pass single param instead of many.
+
+	* src/gsad_omp.c (save_task_omp): Replace multiple args with one.
+
+	* src/gsad_omp.h: Update header accordingly.
+
+2011-08-31  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	Convert more pages to new param mechanism.
+
 	* src/gsad.c (init_validator): Add more rules.
 	(validator_or): Remove.  Out of use.
 	(params_append_mhd): Add more container cases.
